welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: reassignment to val
      vuBiscuit=true
               ^